Fixed focuspoint z-index and now correctly resetting focuspoint when new image is selected

--- a/app/client/stylesheets/components/pu-gallery.sass
+++ b/app/client/stylesheets/components/pu-gallery.sass
@@ -62,7 +62,7 @@
         right: 0
         bottom: 0
         left: 0
-        z-index: 1
+        z-index: 2
         background-color: rgba(white, .75)
         text-align: center
         pointer-events: none
